// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFormValuesByHaku returns correct form values given different hakulomake variations 1`] = `
Object {
  "aikataulut": Object {
    "aikataulu": Array [
      Object {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": Array [
      Object {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "kausi": "kausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "vuosi": Object {
      "value": "2020",
    },
  },
  "hakulomake": Object {
    "kuvaus": Object {},
    "linkki": Object {
      "fi": "https://google.fi",
    },
    "lomake": Object {},
    "tyyppi": "muu",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": Array [
    "fi",
    "sv",
  ],
  "kohdejoukko": Object {
    "kohdejoukko": "kohdejoukko_1#1",
    "tarkenne": Object {
      "value": "tarkenne_1#1",
    },
  },
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "tila": "tallennettu",
  "valintakoe": Object {
    "tilaisuudet": Object {
      "tyyppi_1#1": Array [
        Object {
          "alkaa": "2019-04-16T08:44",
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "fi": "fi osoite",
            "sv": "sv osoite",
          },
          "paattyy": "2019-04-18T08:44",
          "postinumero": Object {
            "value": "posti_1#1",
          },
        },
      ],
    },
    "tyypit": Array [
      Object {
        "value": "tyyppi_1#1",
      },
    ],
  },
  "yhteyshenkilot": Array [
    Object {
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": Object {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": Object {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": Object {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": Object {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
    },
  ],
}
`;

exports[`getFormValuesByHaku returns correct form values given different hakulomake variations 2`] = `
Object {
  "aikataulut": Object {
    "aikataulu": Array [
      Object {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": Array [
      Object {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "kausi": "kausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "vuosi": Object {
      "value": "2020",
    },
  },
  "hakulomake": Object {
    "kuvaus": Object {
      "fi": "kuvaus",
    },
    "linkki": Object {},
    "lomake": Object {},
    "tyyppi": "ei sähköistä",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": Array [
    "fi",
    "sv",
  ],
  "kohdejoukko": Object {
    "kohdejoukko": "kohdejoukko_1#1",
    "tarkenne": Object {
      "value": "tarkenne_1#1",
    },
  },
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "tila": "tallennettu",
  "valintakoe": Object {
    "tilaisuudet": Object {
      "tyyppi_1#1": Array [
        Object {
          "alkaa": "2019-04-16T08:44",
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "fi": "fi osoite",
            "sv": "sv osoite",
          },
          "paattyy": "2019-04-18T08:44",
          "postinumero": Object {
            "value": "posti_1#1",
          },
        },
      ],
    },
    "tyypit": Array [
      Object {
        "value": "tyyppi_1#1",
      },
    ],
  },
  "yhteyshenkilot": Array [
    Object {
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": Object {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": Object {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": Object {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": Object {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
    },
  ],
}
`;

exports[`getFormValuesByHaku returns correct form values given haku 1`] = `
Object {
  "aikataulut": Object {
    "aikataulu": Array [
      Object {
        "alkaa": "2019-02-20T12:28",
        "paattyy": "2019-08-01T12:45",
      },
    ],
    "ajastettuJulkaisu": "2020-01-20T05:00",
    "hakuaika": Array [
      Object {
        "alkaa": "2019-03-29T12:28",
        "paattyy": "2019-09-29T12:30",
      },
    ],
    "kausi": "kausi_1#1",
    "lisaamisenTakaraja": "2019-03-29T12:28",
    "muokkauksenTakaraja": "2019-03-11T09:45",
    "vuosi": Object {
      "value": "2020",
    },
  },
  "hakulomake": Object {
    "kuvaus": Object {},
    "linkki": Object {},
    "lomake": Object {
      "ataru": Object {
        "value": "12345",
      },
    },
    "tyyppi": "ataru",
  },
  "hakutapa": "hakutapa_1#1",
  "kieliversiot": Array [
    "fi",
    "sv",
  ],
  "kohdejoukko": Object {
    "kohdejoukko": "kohdejoukko_1#1",
    "tarkenne": Object {
      "value": "tarkenne_1#1",
    },
  },
  "nimi": Object {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "tila": "tallennettu",
  "valintakoe": Object {
    "tilaisuudet": Object {
      "tyyppi_1#1": Array [
        Object {
          "alkaa": "2019-04-16T08:44",
          "lisatietoja": Object {
            "fi": "fi lisatietoja",
            "sv": "sv lisatietoja",
          },
          "osoite": Object {
            "fi": "fi osoite",
            "sv": "sv osoite",
          },
          "paattyy": "2019-04-18T08:44",
          "postinumero": Object {
            "value": "posti_1#1",
          },
        },
      ],
    },
    "tyypit": Array [
      Object {
        "value": "tyyppi_1#1",
      },
    ],
  },
  "yhteyshenkilot": Array [
    Object {
      "nimi": Object {
        "fi": "Fi nimi",
        "sv": "Sv nimi",
      },
      "puhelinnumero": Object {
        "fi": "Fi puhelinnumero",
        "sv": "Sv puhelinnumero",
      },
      "sahkoposti": Object {
        "fi": "Fi sähköposti",
        "sv": "Sv sähköposti",
      },
      "titteli": Object {
        "fi": "Fi titteli",
        "sv": "Sv titteli",
      },
      "verkkosivu": Object {
        "fi": "Fi verkkosivu",
        "sv": "Sv verkkosivu",
      },
    },
  ],
}
`;
